--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,6 +10,7 @@ body {
     position: relative;
 }
 .container{
+
     position: relative;
 }
 .header header {
@@ -232,12 +233,8 @@ nav .menuBar {
     justify-content: center;
 }
 .education .btn-container .btnBox {
-    padding: 12px 15px;
-    margin: 10px;
     background: transparent;
-    width: 400px;
     color: azure;
-    font-size: 38px;
     cursor: pointer;
 }
 .education .resume-container {
@@ -716,7 +713,7 @@ nav .menuBar {
     box-shadow:  0 0 1px 1px #858792;
 }
 .favourite .company-container .company-box img {
-     /*background-image: #858792;*/
+    /* background-image: #858792; */
     opacity: 0.8;
     max-height: 250px;
 }
@@ -1036,7 +1033,7 @@ nav .menuBar {
     .grid-container .icons .iconLink:nth-child(3){
         top: 10%;
         left: 50%;
-        transform: translate(-50%, -10%)  rotate(-90deg);
+        transform: translate(-50%, -10%) rotate(-90deg);
     }
     .grid-container .icons .iconLink:nth-child(4){
         top: 90%;
@@ -1077,6 +1074,12 @@ nav .menuBar {
         padding-left: 100px;
         padding-top: 70px;
         padding-right: 95px;
+    }
+    .education .btn-container .btnBox {
+        padding: 12px 15px;
+        margin: 10px;
+        font-size: 38px;
+        width: 400px;
     }
     .resume-container .resume-box .resume .resume-tab-list-single-item .content {
         flex-direction: row;
@@ -1122,7 +1125,7 @@ nav .menuBar {
     }
 
     .works .work-container {
-        height: 380px;
+        height: 400px;
         border: 1px solid silver;
         overflow: hidden;
         transition: 0.9s;
@@ -1172,19 +1175,6 @@ nav .menuBar {
     }
     /* Contact rwd */
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -1337,6 +1327,12 @@ nav .menuBar {
         padding-top: 70px;
         padding-right: 95px;
     }
+    .education .btn-container .btnBox {
+        padding: 10px 13px;
+        margin: 8px;
+        width: 300px;
+        font-size: 30px;
+    }
     .resume-container .resume-box .resume .resume-tab-list-single-item .content {
         flex-direction: column;
         padding: 20px;
@@ -1380,7 +1376,7 @@ nav .menuBar {
     }
     .works .work-container {
         overflow: hidden;
-        height: 375px;
+        height: 400px;
     }
     .works .work-container.height {
         overflow: visible;
@@ -1583,9 +1579,12 @@ nav .menuBar {
     }
     .home .grid-container .content {
         padding-left: 80px;
-        /* padding-top: 0;
-        padding-right: 75px; */
-        /* padding: 0; */
+    }
+    .education .btn-container .btnBox {
+        padding: 8px 12px;
+        font-size: 24px;
+        margin: 5px;
+        width: 150px;
     }
     .resume-container .resume-box .resume .resume-tab-list-single-item .content {
         flex-direction: column;
@@ -1628,10 +1627,10 @@ nav .menuBar {
     .footer .footer-container-box .grid-box {
         display: grid;
         width: 100%;
-        grid-template-columns: repeat(2, 160px);
+        grid-template-columns: repeat(2, 150px);
     }
     .footer .footer-container-box .grid-box .col a {
-        font-size: 17px;
+        font-size: 14px;
         font-weight: 400;
     }
 
@@ -1654,6 +1653,14 @@ nav .menuBar {
     }
     /* Contact rwd */
 }
+
+
+
+
+
+
+
+
 
 
 @media print {
