--- a/css/style.css
+++ b/css/style.css
@@ -824,7 +824,7 @@ h6 {
 }
 
 .project-image {
-    margin: auto;
+    margin: 12px auto;
     width: 90%;
     height: 90%;
     object-fit: contain;
